--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -26,7 +26,7 @@ default_lng: en
 # single language disables language switch
 # language order is linked to array order
 # language_switch_lang_list: [en, ja, pt, fr, zh, ko, tr]
-language_switch_lang_list: [ko, en, ja]
+language_switch_lang_list: [en, ja, ko]
 
 # if the opened page is not in the user's language list,
 # suggest language(s) matching with the one(s) in browser language list and user language list.
